# stat-215-a-gsi

./: .gitignore
week1/: tidyverse_basics_solutions.Rmd
week5/lab_week5/: lab_week5.Rmd  lab_week5.html
week7/: Week7.html  Week7.nb.html  Week7.rmd
week7/Rcpp_test/: CMakeLists.txt
week7/rcpp_example/: Rcpp_demo.cpp
